--- a/app/views/shared/_2_services.html.haml
+++ b/app/views/shared/_2_services.html.haml
@@ -47,47 +47,36 @@
     
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("niz.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підгін низу (джинси, сукні, пальто та інші речі)")
+          = image_tag("niz.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card4.h2"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
-                Підгін низу
+                = t "landing.services.card4.h2"
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
-                від 150 грн              
+                = t "landing.services.card4.p1"     
               %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
-                Це процес корекції довжини джинсів,
-                суконь, пальт та інших речей знизу.
-                Цей вид ремонту є дуже популярним серед людей,
-                які хочуть підігнати своє одяг під свої розміри та створити вишуканий образ.
-                Правильно підгінений низ може значно покращити зовнішній вигляд та зробити образ більш стильним і доглянутим.
+                = t "landing.services.card4.p2"
 
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("melkiy.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Дрібний ремонт одягу")
+          = image_tag("melkiy.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card5.h2"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
-                Дрібний ремонт одягу
+                = t "landing.services.card5.h2"
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
-                від 50 грн              
+                = t "landing.services.card5.p1"     
               %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
-                Ця послуга дозволяє виправляти маленькі пошкодження на вашому одязі.
-                Це може бути зашивання ґудзиків, закріплення швів або зашивання дирок.
-                Підтримуючи одяг у належному стані, ви економите час і гроші на пошитті нового одягу,
-                а також дбаєте про навколишнє середовище, уникнувши швидкого викидання старих речей.
+                = t "landing.services.card5.p2"
 
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("shtory.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підшивання штор")
+          = image_tag("shtory.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{t "landing.services.card6.h2"}")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
-                Підшивання штор
+                = t "landing.services.card6.h2"
               %p{class: "mx-auto text-base leading-relaxed text-red-500"}
-                від 200 грн              
+                = t "landing.services.card6.p1"     
               %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
-                Ця процедура допомагає створити естетичний вигляд приміщення,
-                а також підвищити функціональність штор,
-                дозволяючи їм краще захищати від сонячних променів або забезпечувати приватність.
-                Підшивання штор може бути важливою частиною оформлення будь-якого інтер'єру,
-                сприяючи створенню затишної та гармонійної атмосфери.
+                = t "landing.services.card6.p2"
