--- a/app/views/shared/_5_about.html.haml
+++ b/app/views/shared/_5_about.html.haml
@@ -49,7 +49,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "spool.svg", alt: "Гарантія якості"
+                = image_tag " ", alt: "Гарантія якості"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 Гарантія якості
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
