--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -26,13 +26,13 @@
       -# Switch locales
       - I18n.available_locales.each do |locale|
         %div{class: "relative inline-block text-senter"}
-          .group
+          %div{class: "group"}
             - if I18n.locale == locale
               %button{class: "font-messiri inline-block w-full text-center text-xl font-medium text-red-500 bg-stone-100 p-1", type: "button"}
                 = t(locale, scope: 'locales')
             - else
               %div{class: "p-1 text-xl"}
-                = link_to t(locale, scope: 'locales'), url_for(locale: locale)
+                = link_to t(locale, scope: 'locales'), root_path(locale: locale)
 
     %div{id: "navbar-sticky", class: "text-center items-center justify-between hidden w-full md:flex md:w-auto md:order-1"}
       %ul{class: "flex flex-col p-2 md:p-0 mt-2 font-medium rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-stone-100"}
