--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -1,10 +1,10 @@
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
     %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
-      Наші послуги
+      = t ("service.h1")
 
   %div{class: "mt-10"}
-    %dl{class: "space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10"}
+    %dl{class: "space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-4 md:gap-y-5"}
       %div{class: "relative"}
         %dt
           %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
@@ -40,7 +40,7 @@
 
 %div{class: "mx-auto p-5 sm:p-10 md:p-16"}
   %h2{class: "text-center my-4 text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
-    Ремонт одягу
+    = t ("service.h2_1")
   %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
     - @services.repair.each do |service|
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
@@ -61,7 +61,7 @@
 
 %div{class: "mx-auto p-5 sm:p-10 md:p-16"}
   %h2{class: "text-center my-4 text-xl text-stone-500 sm:text-2xl leading-normal font-extrabold tracking-tight"}
-    Індивідуальний пошив одягу
+    = t ("service.h2_2")
   %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
     - @services.sewing.each do |service|
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
