--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -2,7 +2,7 @@
   %div{class: "text-3xl text-red-500 sm:text-4xl text-center leading-normal font-bold"}
     = @service.title
   %div{class: "flex flex-col lg:flex-row justify-between"}
-    %div{class: "px-4 w-full lg:w-8/12"}
+    %div{class: "px-4 lg:w-8/12"}
       %sectionmx-auto{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
         - if @service.image.present?
           %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@service.image)}')", title: @service.title}
@@ -18,17 +18,14 @@
               %p{class: "text-base leading-8 my-5"}
                 = @service.body
           %div{class: "text-end p-4"}
-            = link_to "Повернутись на попередню сторінку", :back, class: "justify-end text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
+            = link_to "#{t ("service.back")}", :back, class: "justify-end text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
 
-    %div{class: "px-4"}
+    %div{class: "px-4 lg:w-4/12"}
       %div{class: "bg-stone-100 px-4 py-6 rounded"}
         %h3{class: "text-lg font-bold mb-2"} 
-          Наші роботи:
+          = t ("service.h3")
         %ul{class: "list-outside"}
           - @service.articles.each do |article|
-            - if article.present? && article.published?
-              %li{class: "mb-2 text-justify"}
-                %i{class: "me-2 text-sm fa-solid fa-feather text-red-500"}
-                = link_to article.title, article_path(article), class: "text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
-            - else
-              Працюємо над заповненням розділу.
+            %li{class: "mb-2 text-justify"}
+              %i{class: "me-2 text-sm fa-solid fa-feather text-red-500"}
+              = link_to article.title, article_path(article), class: "text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
