--- a/app/views/shared/_5_about.html.haml
+++ b/app/views/shared/_5_about.html.haml
@@ -3,63 +3,48 @@
     %div{class: "max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"}
       %div{class: "text-center"}
         %h2{class: "font-heading mb-4 bg-orange-100 text-orange-800 px-4 py-2 rounded-lg md:w-64 md:mx-auto text-xs font-semibold tracking-widest text-black uppercase title-font"}
-          Чому нам довіряють?
+          = t ("landing.about.h2")
         %p{class: "font-heading mt-2 text-3xl leading-8 font-semibold tracking-tight text-red-500 sm:text-4xl"}
-          Багаторічний досвід та бездоганна репутація.
+          = t ("landing.about.p1")
         %p{class: "mt-4 max-w-2xl text-lg text-gray-500 lg:mx-auto"}
-          Ми уважно вислухаємо кожного клієнта, порадимо найкраще рішення, якісно та швидко виконаємо замовлення.
+          = t ("landing.about.p2")
       %div{class: "mt-10"}
         %dl{class: "space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10"}
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "mashine.svg", alt: "Нове сучасне обладнання"
+                = image_tag "mashine.svg", alt: "#{t ("landing.about.dl1.img")}"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
-                Нове сучасне обладнання
+                = t ("landing.about.dl1.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
-              У нашій швейній майстерні ми використовуємо найновіше обладнання,
-              завдяки якому якість наших робіт завжди на високому рівні.
-              Ми прагнемо до ідеальної якості кожного шва, кожної деталі і кожного виробу,
-              тому вкладаємо зусилля у покращення технічного обладнання. Наші клієнти можуть бути впевнені,
-              що у нас вони отримають продукт високої якості, виготовлений з урахуванням найсучасніших стандартів.
+              = t ("landing.about.dl1.dd")
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "button.svg", alt: "Дипломовані майстри"
+                = image_tag "mashine.svg", alt: "#{t ("landing.about.dl2.img")}"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
-                Дипломовані майстри
+                = t ("landing.about.dl2.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
-              Усі наші майстри мають профільну освіту та володіють сучасними технологіями ремонту одягу та крою.
-              Їхні навички і знання дозволяють їм професійно відновлювати одяг,
-              виконувати складні шви та крій, щоб забезпечити клієнтам якісний та модний ремонт.
-              Ми горді, що наші майстри є досвідченими фахівцями у галузі та завжди готові надати найкращий
-              сервіс нашим клієнтам.
+              = t ("landing.about.dl2.dd")
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "model.svg", alt: "Гнучкі ціни"
+                = image_tag "mashine.svg", alt: "#{t ("landing.about.dl1.img")}"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
-                Гнучкі ціни
+                = t ("landing.about.dl1.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
-              Вартість ремонту одягу в нашій майстерні - це завжди вигідний вибір.
-              Ви не лише отримуєте якісний сервіс від досвідчених майстрів,
-              але також заощадите гроші, порівняно з покупкою нового одягу.
-              Ціни на ремонт зазвичай доступні та гнучкі,
-              а приємна атмосфера майстерні робить процес ще приємнішим.
+              = t ("landing.about.dl1.dd")
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag " ", alt: "Гарантія якості"
+                = image_tag "mashine.svg", alt: "#{t ("landing.about.dl2.img")}"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
-                Гарантія якості
+                = t ("landing.about.dl2.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
-              Ми гарантуємо якісне та швидке обслуговування для кожного нашого клієнта.
-              Наша команда професіоналів завжди готова надати вам найкращий сервіс і
-              вирішити будь-які питання, щоб забезпечити ваше задоволення. Ми прагнемо до відмінності
-              в кожній деталі, щоб зробити ваш досвід з нами незабутнім і приємним.
+              = t ("landing.about.dl2.dd")
       %div{class: "text-center"}
         %h3{class: "mt-8 max-w-5xl text-2xl text-red-500 mx-auto font-semibold"}
           %span{class:""}
-            Ми цінуємо ваш та свій час, оскільки це один з найцінніших ресурсів, яким ми володіємо.
+            = t ("landing.about.h3_1")
           %span{class:""}
-            Тому якість наших послуг завжди на високому рівні.
+            = t ("landing.about.h3_2")
