--- a/app/views/shared/_7_faq.html.haml
+++ b/app/views/shared/_7_faq.html.haml
@@ -1,61 +1,59 @@
 %section{class: "font-messiri bg-white max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %h2{class: "text-center"}
     %div{class: "mt-4 text-sm leading-7 text-stone-500 font-regular"}
-      %span{class: "hover:text-stone-900 hover:border-b-2 hover:border-red-500"}
+      %span{class: "text-red-500 hover:text-red-500 hover:border-b-2 hover:border-red-500"}
         = link_to "F.A.Q", faq_path
     %div{class: "text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight text-stone-900"}
-      Ваші найчастіші
-      %span{class: "hover:text-stone-900 hover:underline hover:underline-offset-4"}
-        = link_to "питання", faq_path
+      = t ("faq.h2_1")
+      %span{class: "text-red-500 hover:text-red-500 hover:underline hover:underline-offset-4"}
+        = link_to "#{t ("faq.h2_2")}", faq_path
   %div{class: "mt-8"}
     %ul
       %li{class: "text-left mb-4"}
         %div{class: "flex flex-row items-start mb-2"}
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
-          %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h3{class: "text-md leading-6 font-medium text-gray-900"}
-              Чи здійснюєте ви ремонт одягу?
+          %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
+            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+              = t ("faq.q1")
         %div{class: "flex flex-row items-start"}
-          %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
+          %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
             %p{class: "text-gray-700"}
-              Ми зможемо виправити вам тканеві виріби, а також виріби з кожі та хутра.
-              Здійснюємо ремонт будь-якої складності.
-          %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
+              = t ("faq.a1")
+          %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
       -#
       %li{class: "text-left mb-4"}
         %div{class: "flex flex-row items-start mb-2"}
-          %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
+          %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
-          %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h3{class: "text-md leading-6 font-medium text-gray-900"}
-              Сільки мені буде коштувати виправити зіпсовану або пошкоджену речь?
+          %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
+            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+              = t ("faq.q2")
         %div{class: "flex flex-row items-start"}
-          %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
+          %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
             %p{class: "text-gray-700"}
-              Розрахунок кінцевої якості залежить від складності ремонту. Подивіться орієнтовни
+              = t ("faq.a2")
               %span{class: "text-red-500 hover:border-b-2 hover:border-red-500"}
-                = link_to "ціни", prices_path
-              на румонт одягу.
-          %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
+                = link_to "#{t ("faq.a2_1")}", prices_path
+              = t ("faq.a2_2")
+          %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
       -#
       %li{class: "text-left mb-4"}
         %div{class: "flex flex-row items-start mb-2"}
-          %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
+          %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
-          %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h3{class: "text-md leading-6 font-medium text-gray-900"}
-              Я можу в вас заказати пошив якойсь речі індивідуально?
+          %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
+            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+              = t ("faq.q3")
         %div{class: "flex flex-row items-start"}
-          %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
+          %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
             %p{class: "text-gray-700"}
-              Звісно. Ми займаємось індивідуальним пошивом суконь, брюк, спідниць, джинсів, пальто, тощо.
-              З повним перечнем послуг ви можете ознайомитись у відповідному
+              = t ("faq.a3")
               %span{class: "text-red-500 hover:border-b-2 hover:border-red-500"}
-                = link_to "розділі", services_path
-              нашого сайта.
+                = link_to "#{t ("faq.a3_1")}", services_path
+              = t ("faq.a3_2")
           %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
       -#
@@ -63,17 +61,16 @@
         %div{class: "flex flex-row items-start mb-2"}
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
-          %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h3{class: "text-md leading-6 font-medium text-gray-900"}
-              Скільки коштує індивідуальний пошив?
+          %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
+            %h4{class: "text-md leading-6 font-medium text-gray-900"}
+              = t ("faq.q4")
         %div{class: "flex flex-row items-start"}
-          %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
+          %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
             %p{class: "text-gray-700 "}
-              На вартість пошиву впливають дуже багато факторів, такі як складність на фасон вирібу,
-              якість та кількість матеріалів, терміновість пошиву. Подивіться орієнтовні
+              = t ("faq.a4")
               %span{class: "text-red-500 hover:border-b-2 hover:border-red-500"}
-                = link_to "ціни", prices_path
-              на індивідуальний пошив речей.
+                = link_to "#{t ("faq.a4_1")}", prices_path
+              = t ("faq.a4_2")
           %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
       -#
@@ -81,12 +78,12 @@
         %div{class: "flex flex-row items-start mb-2"}
           %div{class: "hidden sm:flex items-center justify-center p-3 mr-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-circle-question"}
-          %div{class: "bg-stone-100 p-2 px-10 w-full flex items-center rounded-xl"}
-            %h3{class: "text-md leading-6 font-medium text-gray-900 "}
-              Ви працюєте з матеріалами замовника для пошиву речей?
+          %div{class: "bg-stone-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
+            %h4{class: "text-md leading-6 font-medium text-gray-900 "}
+              = t ("faq.q5")
         %div{class: "flex flex-row items-start"}
-          %div{class: "bg-indigo-100 p-2 px-10 w-full flex items-center rounded-xl"}
+          %div{class: "bg-indigo-100 shadow-md p-2 px-10 w-full flex items-center rounded-xl"}
             %p{class: "text-gray-700 "}
-              Так. Після консультації та зняття вимірів, ви можете придбати необхідну кількість тканини та фурнітури, та предоставити нам для роботи. Ми також можемо придбати необхідні матеріали за вас.
+              = t ("faq.a5")
           %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
