--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -2,6 +2,6 @@
   %div{class: "flex flex-col md:flex-row md:justify-content-center md:align-items-center"}
     %div{class: "text-sm text-gray-600"}
       Copyright © 2022-#{Date.today.strftime('%Y')}
-      = link_to "Швейна майстерня ☞ ДРУЖБА ☜", root_path, class: "px-2"
+      = link_to "#{t ("footer")}", root_path, class: "px-2"
     %div{class: "text-sm text-gray-600 md:ml-auto justify-content-center align-items-center"}
       %a{href: "mailto:admin@druzhba.biz.ua"} admin@druzhba.biz.ua
