--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 !!!
-%html
-  %head{lang: "#{I18n.locale}"}
+%html{lang: "#{I18n.locale}"}
+  %head
     -# Google tag (gtag.js)
     %script{async: "true", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
 
