--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,7 +1,7 @@
 -#= video_tag("test.mp4", size: "640", autoplay: :autoplay, loop: :loop, controls: true, html: {class: "border-4"})
 -#%button{onclick: "setGtag()", class: "hidden"} Yes
 
-%div{class: "", id: ""}
+%div{class: ""}
   
   %div{class: "odd wow", id: "hero-section-1"}
     = render "shared/1_hero_section"
