--- a/app/views/shared/_7_faq.html.haml
+++ b/app/views/shared/_7_faq.html.haml
@@ -3,7 +3,7 @@
     %div{class: "mt-4 text-sm leading-7 text-stone-500 font-regular"}
       %span{class: "text-red-500 hover:text-red-500 hover:border-b-2 hover:border-red-500"}
         = link_to "F.A.Q", faq_path
-    %div{class: "text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight text-stone-900"}
+    %h3{class: "text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight text-stone-900"}
       = t ("faq.h2_1")
       %span{class: "text-red-500 hover:text-red-500 hover:underline hover:underline-offset-4"}
         = link_to "#{t ("faq.h2_2")}", faq_path
