--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -3,7 +3,7 @@
 
 %div{class: ""}
   
-  %div{class: "odd wow", id: "hero-section-1"}
+  %div{class: "", id: "hero-section-1"}
     = render "shared/1_hero_section"
   
   %div{class: "even wow mt-8", id: "services"}
