--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -55,3 +55,7 @@
         %i{class: "text-2xl text-stone-600 fa-solid fa-jet-fighter-up"}
       %div{id: "scroll-to-top", class: "w-24 absolute z-10 invisible inline-block transition-opacity duration-300", "data-popover": "", role: "tooltip"}
         %p{class: "font-messiri text-md text-stone-600"} До початку
+
+    -# FlowbiteJS
+    %link{href: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css", rel: "stylesheet"}
+    %script{async: "", src: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"}
