--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,9 +18,6 @@
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true, async: ""
 
-    -# FlowbiteJS
-    %link{href: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css", rel: "stylesheet"}
-    %script{async: "", src: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"}
     
     -# AnimatedCSS and WOWjs
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
@@ -57,5 +54,5 @@
         %p{class: "font-messiri text-md text-stone-600"} До початку
 
     -# FlowbiteJS
-    %link{href: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css", rel: "stylesheet"}
-    %script{async: "", src: "https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"}
+    %link{href: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.min.css", rel: "stylesheet"}
+    %script{async: "", src: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.min.js"}
