--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true, async: ""
 
     -# FlowbiteJS
-    %link{href: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.min.css", rel: "stylesheet"}
+    %link{href: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.css", rel: "stylesheet"}
     %script{async: "", src: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.min.js"}
     
     -# AnimatedCSS and WOWjs
