--- a/app/views/shared/_1_hero_section.html.haml
+++ b/app/views/shared/_1_hero_section.html.haml
@@ -1,8 +1,9 @@
 %section{class: "h-screen py-3 sm:py-6 sm:mt-2 md:mt-4 lg:mt-6 xl:mt-8"}
   .relative.flex.flex-col.items-center.mx-auto.lg:flex-row-reverse.lg:max-w-5xl.lg:mt-8.xl:max-w-7xl
-    .w-full.h-64.lg:h-auto{:class => "lg:w-1/2"}
+    -#.w-full.h-64.lg:h-auto{:class => "lg:w-1/2"}
+    %div{class: "w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
       = image_tag("hero.avif", loading: 'lazy', class: "w-full h-[300px] md:h-[400px]", alt: "#{t "landing.hero-1.img_alt"}")
-    .max-w-lg.bg-white.md:max-w-2xl.md:z-10.md:shadow-lg.md:absolute.md:top-0.md:mt-48.lg:left-0.lg:mt-20.lg:ml-20.xl:mt-24.xl:ml-12{:class => "lg:w-3/5"}
+    .max-w-lg.bg-white.md:max-w-2xl.md:z-10.md:shadow-lg.md:absolute.md:top-0.md:mt-48.lg:left-0.lg:mt-32.lg:ml-20.xl:mt-40.xl:ml-12{:class => "lg:w-3/5"}
       .flex.flex-col.p-12.md:px-16
         %h1.font-messiri.text-red-500.text-2xl.font-medium.uppercase.lg:text-3xl
           = t "landing.hero-1.h1"
