--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -6,7 +6,7 @@
   %div{class: "odd wow", id: "hero-section-1"}
     = render "shared/1_hero_section"
   
-  %div{class: "even wow mt-8", id: "services"}
+  %div{class: "even wow", id: "services"}
     = render "shared/2_services"
 
   %div{class: "odd wow mt-8", id: "hero-section-2"}
