--- a/app/views/shared/_4_prices.html.haml
+++ b/app/views/shared/_4_prices.html.haml
@@ -1,7 +1,7 @@
 %section{class: "container font-messiri mx-auto px-4 space-y-6 bg-stone-100 my-8"}
   %div{class: "max-w-screen-xl px-4 py-8 mx-auto lg:py-8 lg:px-6"}
     %div{class: "max-w-5xl mx-auto mb-8 text-center lg:mb-12"}
-      %h2{class: "text-3xl font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
+      %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
         Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
       %h2{class: "text-3xl font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
         Високий професіоналізм та великий рівень якості наданих послуг.
