--- a/app/views/shared/_5_about.html.haml
+++ b/app/views/shared/_5_about.html.haml
@@ -2,7 +2,7 @@
   %div{class: ""}
     %div{class: "max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"}
       %div{class: "text-center"}
-        %h2{class: "font-heading mb-4 bg-orange-100 text-orange-800 px-4 py-2 rounded-lg md:w-64 md:mx-auto text-xs font-semibold tracking-widest text-black uppercase title-font"}
+        %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
           = t ("landing.about.h2")
         %p{class: "font-heading mt-2 text-3xl leading-8 font-semibold tracking-tight text-red-500 sm:text-4xl"}
           = t ("landing.about.p1")
