--- a/app/views/shared/_8_contacts.html.haml
+++ b/app/views/shared/_8_contacts.html.haml
@@ -1,7 +1,7 @@
 -#%div{class: ""}
 %section{class: "container font-messiri mx-auto px-4 space-y-6 bg-stone-100 my-8 p-6"}
   %div{class: "mx-auto text-center"}
-    %h2{class: "font-heading mt-2 text-3xl leading-8 font-semibold tracking-tight text-red-500 sm:text-4xl"}
+    %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
       = t ("contacts.h2")
   %div{class: "text-center lg:text-left"}
     %div{class: ""}
