--- a/app/views/shared/_1_hero_section.html.haml
+++ b/app/views/shared/_1_hero_section.html.haml
@@ -1,42 +1,12 @@
 %section{class: "h-screen py-3 sm:py-6 sm:mt-2 md:mt-4 lg:mt-6 xl:mt-8"}
-  .relative.flex.flex-col.items-center.mx-auto.lg:flex-row-reverse.lg:max-w-5xl.lg:mt-8.xl:max-w-7xl
-    -#.w-full.h-64.lg:h-auto{:class => "lg:w-1/2"}
+  %div{class: "relative flex flex-col items-center mx-auto lg:flex-row-reverse lg:max-w-5xl lg:mt-8 xl:max-w-7xl"}
     %div{class: "w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
       = image_tag("hero.avif", loading: 'lazy', class: "w-full h-[300px] md:h-[400px]", alt: "#{t "landing.hero-1.img_alt"}")
-    .max-w-lg.bg-white.md:max-w-2xl.md:z-10.md:shadow-lg.md:absolute.md:top-0.md:mt-48.lg:left-0.lg:mt-32.lg:ml-20.xl:mt-40.xl:ml-12{:class => "lg:w-3/5"}
-      .flex.flex-col.p-12.md:px-16
-        %h1.font-messiri.text-red-500.text-2xl.font-medium.uppercase.lg:text-3xl
+    %div:{class: "max-w-lg bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-32 lg:ml-20 xl:mt-40 xl:ml-12 lg:w-3/5"}
+      %div{class: "flex flex-col p-12 md:px-16"}
+        %h1{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
           = t "landing.hero-1.h1"
-        %h2.mt-4.font-messiri.text-xl
+        %p{class: "mt-4 font-messiri text-xl"}
+          = t "landing.hero-1.p"
+        %h2{class: "mt-4 font-messiri text-red-500 text-2xl font-medium lg:text-3xl"}
           = t "landing.hero-1.h2"
-        %div{class: "flex flex-col md:flex-row justify-evenly py-2 text-xl text-center"}
-          %div{class: "rounded-lg shadow-lg bg-orange-100 text-orange-800 m-2 md:w-2/5 px-2 py-1"}
-            = t "landing.hero-1.left"
-          %div{class: "rounded-lg shadow-lg bg-orange-100 text-orange-800 m-2 md:w-2/5 px-2 py-1"}
-            = t "landing.hero-1.right"
-      
-
-
-
-
--#%section{class: "py-3 sm:py-6 sm:mt-2 md:mt-4 lg:mt-6 xl:mt-8"}
--#  %div{class: "mx-auto container px-6 lg:px-8"}
--#    %div{class: "mx-auto max-w-7xl text-center font-messiri"}
--#      %div{class: "text-2xl font-bold tracking-tight sm:text-3xl font-medium uppercase text-red-500"}
--#        = t "landing.hero-1.top"
--#        
--#      %h1{class: "mt-6 leading-8 text-stone-900 text-light text-xl md:text-2xl"}
--#        %div{class: "tracking-wide"}
--#          = t "landing.hero-1.h2"
--#          
--#      %div{class: "flex flex-col md:flex-row justify-evenly py-2 text-xl"}
--#        %div{class: "rounded-lg shadow-lg bg-orange-100 text-orange-800 m-2 md:w-2/5 px-2 py-1"}
--#          = t "landing.hero-1.left"
--#
--#        %div{class: "rounded-lg shadow-lg bg-orange-100 text-orange-800 m-2 md:w-2/5 px-2 py-1"}
--#          = t "landing.hero-1.right"
--#
--#    %div{class: "mt-3 flow-root"}
--#      %div{class: "w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
--#        = image_tag("hero.avif", loading: 'lazy', class: "w-full h-[300px] md:h-[400px]", alt: "#{t "landing.hero-1.img_alt"}")
-
