--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,4 +1,4 @@
-%footer{class: "font-messiri py-4 px-4 shadow-md z-10 bg-stone-200"}
+%div{class: "font-messiri py-4 px-4 shadow-md z-10 bg-stone-200"}
   %div{class: "flex flex-col md:flex-row md:justify-content-center md:align-items-center"}
     %div{class: "text-sm text-gray-600"}
       Copyright © 2022-#{Date.today.strftime('%Y')}
