--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,33 +1,34 @@
 /* Custom styles */
-
 .h-shadow {
   text-shadow: 1px 1px 2px rgba(174, 10, 10, 0.5);
 }
 
-.trix-content div {
-  text-align: justify;
-  /*text-indent: 2rem;*/
-}
+.trix-content {
+  div {
+    text-align: justify;
+    /*text-indent: 2rem;*/
+  }
 
-.trix-content div img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  /* width: 75%; */
-}
+  div img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* width: 75%; */
+  }
 
-.trix-content ul {
-  color: rgba(120, 113, 108, 1);
-}
+  ul {
+    color: rgba(120, 113, 108, 1);
+  }
 
-.trix-content li {
-  list-style: square outside;
-}
+  li {
+    list-style: square outside;
+  }
 
-.trix-content li::marker {
-  color: rgba(239, 68, 68, 1);
-}
+  li::marker {
+    color: rgba(239, 68, 68, 1);
+  }
 
-/*.trix-content strong {
-  text-shadow: 4px 4px 20px rgba(239, 68, 68, 1);
-}*/
+  strong {
+    text-shadow: 4px 4px 20px rgba(174, 10, 10, 0.5);
+  }
+}
