--- a/app/views/admin/orders/_form.html.haml
+++ b/app/views/admin/orders/_form.html.haml
@@ -27,7 +27,7 @@
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :price, :number, required: true)
   .list-group-item
-    = render Admin::FieldsetComponent.new(form, :description, :text_area)
+    = render Admin::FieldsetComponent.new(form, :description, :text)
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :dead_date, :date, required: true, datepicker: true)
   .list-group-item
