--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
     %meta{name: "description", content: "#{@page_description}"}
     %meta{name: "revisit-after", content: "1 days"}
+    %meta{name: "google-adsense-account", content: "ca-pub-3829218691602401"}
 
     = csrf_meta_tags
     = csp_meta_tag
