--- a/app/views/admin/common/_header_menu.html.haml
+++ b/app/views/admin/common/_header_menu.html.haml
@@ -6,6 +6,4 @@
   %li.nav-item
     = link_to 'Замовлення', admin_orders_path, class: 'nav-link fs-3'
   %li.nav-item
-    = link_to 'MONEY FLOWS', admin_money_flows_path, class: 'nav-link'
-  %li.nav-item
-    = link_to 'MONEY FLOW CATEGORIES', admin_money_flow_categories_path, class: 'nav-link'
+    = link_to 'Кошти', admin_money_flows_path, class: 'nav-link fs-3'
