--- a/app/views/admin/money_flows/_show_content.html.haml
+++ b/app/views/admin/money_flows/_show_content.html.haml
@@ -23,6 +23,12 @@
         .text-muted.fw-bold= money_flow.class.human_attribute_name(:total_amount)
       .col-md-9
         = money_flow.total_amount
+  .list-group-item
+    .row
+      .col-md-3
+        .text-muted.fw-bold= money_flow.class.human_attribute_name(:order_id)
+      .col-md-9
+        = money_flow.order_id
 .card.mb-3
   .card-header
     %h4.text-muted.mb-0= Admin::MoneyFlowDetail.model_name.human
@@ -36,7 +42,6 @@
           %tr
             %th= Admin::MoneyFlowDetail.human_attribute_name(:money_flow_category_id)
             %th= Admin::MoneyFlowDetail.human_attribute_name(:amount)
-            %th= Admin::MoneyFlowDetail.human_attribute_name(:order_id)
         %tbody
           - money_flow.money_flow_details.each do |money_flow_detail|
             %tr
@@ -44,5 +49,3 @@
                 = link_to money_flow_detail.money_flow_category.title, admin_money_flow_category_path(money_flow_detail.money_flow_category), data: { turbo_frame: 'modal_sub' } if money_flow_detail.money_flow_category
               %td
                 = money_flow_detail.amount
-              %td
-                = money_flow_detail.order_id
