--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -56,8 +56,7 @@
                         = link_to 'Статті', admin_articles_path, class: 'dropdown-item'
                       %li{class: "m-0 dropdown-divider bg-info"}
                       %li{class: ""}
-                        %div{class: "dropdown-item"}
-                          Категорії витрат (зробити)
+                        = link_to 'Категорії витрат', admin_money_flow_categories_path, class: 'dropdown-item'
                   %li{class: "nav-item"}
                     = link_to 'Користувачі', admin_admin_users_path, class: 'nav-link fs-3'
                 %li{class: "nav-item dropdown"}
