--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -10,7 +10,7 @@
       = image_tag("scissors.svg", class: "h-4 rotate-180", alt: "<")
 
 %nav{class: "w-full z-20 shadow-md border-gray-200 mt-auto font-messiri"}
-  %div{class: "max-w-screen-xl flex flex-wrap items-center justify-center md:items-center md:justify-between mx-auto px-8 py-1"}
+  %div{class: "max-w-screen-xl flex flex-wrap items-center justify-center md:justify-between mx-auto px-8 py-1"}
     %div{class: "flex sm:order-2 space-x-3 sm:space-x-0 rtl:space-x-reverse"}
       %button{class: "text-stone-600 hover:text-red-200 inline-flex items-center mt-1 p-2 w-10 h-10 justify-center text-sm text-red-500 rounded-lg md:hidden hover:bg-stone-600 focus:outline-none focus:ring-2 focus:ring-stone-600",
                       "aria-controls": "navbar-sticky", "aria-expanded": "false",
