--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,17 +1,6 @@
 !!!
 %html{lang: "#{I18n.locale}"}
   %head
-
-    -# Google Tag Manager
-    -#:javascript
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-TJBHGWFJ');
-    -# End Google Tag Manager
-
-
     %title
       = @page_title.present? ? "Швейна майстерня ☞ДРУЖБА☜ - #{@page_title}" : "Швейна майстерня ☞ ДРУЖБА ☜"
     = favicon_link_tag asset_path('favicon.png')
@@ -45,7 +34,7 @@
           rel: "stylesheet"}
 
     -# FlowbiteJS
-    %link{href: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.css", rel: "stylesheet"}
+    %link{href: "https://unpkg.com/flowbite@latest/dist/flowbite.css", rel: "stylesheet"}
     %script{async: "", src: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.min.js"}
 
     -# Google tag (gtag.js)
@@ -58,13 +47,16 @@
       gtag('config', 'pub-3829218691602401');
       gtag('config', 'G-B1HN94WVHN');
 
+    -# AnimatedCSS and WOWjs
+    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
+    %script{async: "", crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
+
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
+    Cookies:
+    = session[:cookie_consent]
 
-    -# Google Tag Manager (noscript)
-    -#%noscript
-    -#  %iframe{:height => "0", :src => "https://www.googletagmanager.com/ns.html?id=GTM-TJBHGWFJ", style: "display:none;visibility:hidden", width: "0"}
-    -# End Google Tag Manager (noscript)
-
+    -# Cookie_consent
+    = turbo_frame_tag :cookie_consent, src: cookies_path
 
     %main{class: ""}
       %navigation{class: ""}
