--- a/app/views/shared/_contact_form.html.haml
+++ b/app/views/shared/_contact_form.html.haml
@@ -13,15 +13,15 @@
         %div{class: "mb-4"}
           %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "name"}
             = t("landing.contact_form.name")
-          = f.text_field :name, required: true, class: "w-full p-2 border rounded-md focus:outline-none focus:border-blue-500", id: "name"
+          = f.text_field :name, required: true, class: "w-full p-2 border rounded-md focus:outline-none focus:border-blue-500", id: "name", autocomplete: "name"
         %div{class: "mb-4"}
           %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "phone"}
             = t("landing.contact_form.phone")
-          = f.telephone_field :phone, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'phone'
+          = f.telephone_field :phone, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'phone', autocomplete: "phone"
         %div{class: "mb-4"}
           %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "email"}
             = t("landing.contact_form.email")
-          = f.email_field :email, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'email'
+          = f.email_field :email, required: true, class: 'w-full p-2 border rounded-md focus:outline-none focus:border-blue-500', id: 'email', autocomplete: "email"
         %div{class: "mb-4"}
           %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "message"}
             = t("landing.contact_form.message")
