--- a/app/views/shared/_1_hero_section.html.haml
+++ b/app/views/shared/_1_hero_section.html.haml
@@ -2,7 +2,7 @@
   %div{class: "relative flex flex-col items-center mx-auto lg:flex-row-reverse lg:max-w-5xl lg:mt-8 xl:max-w-7xl"}
     %div{class: "w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
       = image_tag("hero.avif", loading: 'lazy', class: "w-full h-[300px] md:h-[400px]", alt: "#{t "landing.hero-1.img_alt"}")
-    %div:{class: "bg-opacity-[85%] max-w-lg bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-32 lg:ml-20 xl:mt-40 xl:ml-12 lg:w-3/5"}
+    %div:{class: "bg-opacity-[85%] w-full bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-32 lg:ml-20 xl:mt-40 xl:ml-12 lg:w-3/5"}
       %div{class: "flex flex-col p-12 md:px-16"}
         %h1{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
           = t "landing.hero-1.h1"
