--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,6 +17,24 @@
     = stylesheet_link_tag "custom", "data-turbo-track": "reload"
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true, async: ""
 
+    -# if session[:cookies_accepted] == true
+    -# Google tag (gtag.js)
+    %script{async: "", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
+    :javascript
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+      gtag('config', 'GTM-TJBHGWFJ');
+      gtag('config', 'pub-3829218691602401');
+      gtag('config', 'G-B1HN94WVHN');
+
+      gtag('consent', 'default', {
+        'ad_storage': 'denied',
+        'ad_user_data': 'denied',
+        'ad_personalization': 'denied',
+        'analytics_storage': 'denied'
+      });
+        
     -# AnimatedCSS and WOWjs
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
     %script{async: "", crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
@@ -37,27 +55,11 @@
     %link{href: "https://unpkg.com/flowbite@latest/dist/flowbite.css", rel: "stylesheet"}
     %script{async: "", src: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.min.js"}
 
-    -# Google tag (gtag.js)
-    %script{async: "", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
-    :javascript
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments)};
-      gtag('js', new Date());
-      gtag('config', 'GTM-TJBHGWFJ');
-      gtag('config', 'pub-3829218691602401');
-      gtag('config', 'G-B1HN94WVHN');
-
     -# AnimatedCSS and WOWjs
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
     %script{async: "", crossorigin: "anonymous", integrity: "sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==", referrerpolicy: "no-referrer", src: "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"}
 
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
-    Cookies:
-    = session[:cookie_consent]
-
-    -# Cookie_consent
-    = turbo_frame_tag :cookie_consent, src: cookies_path
-
     %main{class: ""}
       %navigation{class: ""}
         = render "shared/navigation"
@@ -67,6 +69,9 @@
 
     -# Modal dialog contact form
     = render "shared/contact_form"
+
+    -# Cookie_consent
+    = turbo_frame_tag :cookies_consent, src: cookies_path if session[:cookies_accepted].nil?
 
     -# Scroll to Top button
     %div{class: "fixed bottom-10 end-10"}
