--- a/app/views/cookies/index.html.haml
+++ b/app/views/cookies/index.html.haml
@@ -7,7 +7,7 @@
             By using XYZ, you agree to our
           %div{class: "flex inline-block"}
             = link_to "Reject", cookies_path(cookies_accepted: false), class: "px-2"
-            = link_to "Accept", cookies_path(cookies_accepted: true), class: "px-2"
+            = link_to "Accept", cookies_path(cookies_accepted: true), class: "px-2", onClick: "consentGranted()"
 
             :javascript
               function consentGranted() {
@@ -17,4 +17,6 @@
                   'ad_personalization': 'granted',
                   'analytics_storage': 'granted'
                 });
+                console.log(session[:cookies_accepted])
+                console.log("granted")
               }
